force-app/main/default/objects/RV_Price_ModelInfo__c/RV_Price_ModelInfo__c.object-meta.xml
<CustomObject>
    <label>RV_Price_ModelInfo</label>
    <nameField>
        <label>RV_Price_ModelInfo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RV_Price_ModelInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>