force-app/main/default/objects/RV_Price_ModelInfo__c/fields/CurrentBook__c.field-meta.xml
<CustomField>
    <fullName>CurrentBook__c</fullName>
    <label>CurrentBook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>