force-app/main/default/objects/RV_Price_ModelInfo__c/fields/ElementMatlCode__c.field-meta.xml
<CustomField>
    <fullName>ElementMatlCode__c</fullName>
    <label>ElementMatlCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>