force-app/main/default/objects/RV_Price_ModelInfo__c/fields/NewBook__c.field-meta.xml
<CustomField>
    <fullName>NewBook__c</fullName>
    <label>NewBook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>