force-app/main/default/objects/RV_Price_ModelInfo__c/fields/NewMultiplier__c.field-meta.xml
<CustomField>
    <fullName>NewMultiplier__c</fullName>
    <label>NewMultiplier</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>