force-app/main/default/objects/RV_Price_ModelInfo__c/fields/RevisionDate__c.field-meta.xml
<CustomField>
    <fullName>RevisionDate__c</fullName>
    <label>RevisionDate</label>
    <type>Date</type>
</CustomField>