force-app/main/default/objects/RV_Price_ModelInfo__c/fields/SizeCode__c.field-meta.xml
<CustomField>
    <fullName>SizeCode__c</fullName>
    <label>SizeCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>