force-app/main/default/objects/RV_Price_ModelInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>SizeCode__c</columns>
    <columns>ElementSizeCode__c</columns>
    <columns>BodyMatlCode__c</columns>
    <columns>ElementMatlCode__c</columns>
    <columns>SeatMatlCode__c</columns>
    <columns>PalletMatlCode__c</columns>
    <columns>SoftGoods__c</columns>
    <columns>PilotSoftGoods__c</columns>
    <columns>Price__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>